Squash some bugs and add small qol features

--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@theme {
+}
+
+@layer base {
+  html {
+    @apply scroll-smooth;
+  }
+}
